--- a/main.css
+++ b/main.css
@@ -4,6 +4,28 @@
     box-sizing: border-box;
 }
 
+@keyframes fade-down{
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) scale(0.9);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0px) scale(1);
+    }
+}
+
+@keyframes fade-up{
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0px) scale(1);
+    }
+}
+
 :root{
     --grey:rgb(119, 115, 115);
     --color1:#fff;
@@ -13,6 +35,9 @@
 
 
 /* RESPONSIVE NAVBAR STARTS */
+.navigation{
+    animation: fade-up 0.8s;
+}
 .nav-bar{
     width:100%;
     display:flex;
@@ -112,6 +137,9 @@
 
 
 /* LANDING PAGE STARTS */
+.landingpage{
+    animation: fade-down 0.8s;
+}
 .landing-page{
     display:flex;
     justify-content:center;
@@ -175,6 +203,7 @@
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 30px;
+    animation: fade-up 0.5s;
 
 }
 
@@ -268,6 +297,7 @@
   } */
 .skill{
     background-color: rgb(250, 248, 248);
+    animation: fade-down 0.5s;
 }
 
 
